# charmed-openstack-info

./: .coveragerc  .gitignore  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: deploy.yaml  tox.yml
charmed_openstack_info/: exceptions.py  loader.py
charmed_openstack_info/data/lp-builder-config/: ceph.yaml  infinidat.yaml  misc.yaml  openstack.yaml  ovn.yaml  trilio.yaml
charmed_openstack_info/tests/: test_loader.py
charmed_openstack_info/tests/fixtures/: generic.yaml
