[metadata]
name = charmed-openstack-info
author = OpenStack Charmers
author-email = openstack-charmers@lists.launchpad.net
summary = Information about Charmed OpenStack artifacts and releases.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/openstack-charmers/charmed-openstack-info
project_urls =
    Bug Tracker = https://github.com/openstack-charmers/charmed-openstack-info/issues
    Documentation = https://docs.openstack.org/pbr/
    Source Code = https://github.com/openstack-charmers/charmed-openstack-info
license = Apache-2
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    openstack
    ubuntu

[files]
packages =
    charmed_openstack_info
